  ==> 
  mystring[]
  ---------^
  In result cursor is insided emptied delimited form."

- py-flakes8-run, flakes8 API

- customizable `py-backslashed-lines-indent-offset', default is 5
  Amount of offset per level of indentation of backslashed.
  No semantic indent,  which diff to `py-indent-offset' indicates

- `py-minor-expression' reconsidered, numeric args dropped
  grasps keyword-arguments

- boolean `py-electric-kill-backward-p', default is nil.
  If behind a delimited form of braces, brackets or parentheses,
  `py-electric-backspace' runs `py-empty-out-list-backward'

- customizable `py-closing-list-space', default 1
  Number of chars, closing parentesis outdent from opening

- customizable `py-uncomment-indents-p', default nil
  When non-nil, after uncomment indent lines.

- boolean `py-load-skeletons-p', default nil
  If skeleton definitions should be loaded

- `py-which-def-or-class', command, now used `which-function-mode' 

- unused variable `py-backspace-function' removed

- Bundled third-party-stuff removed as reported conflicting at emacs-mirror, lp:1153998 
  affects autopair.el, smart-operator.el  
  Kept  menu switches resp. commands will issue a warning 

- dropped `py-paragraph-fill-docstring-p'; just `fill-paragraph' should DTRT

New in version 6.1.1
---------------------

- comment-related commands:
  py-uncomment 
  py-comment-block, py-comment-clause,
  py-comment-block-or-clause, py-comment-def,
  py-comment-class, py-comment-def-or-class,
  py-comment-statement

- boolean `py-set-fill-column-p'
  If `t', enables use Python specific `fill-column' according to
  `py-docstring-fill-column', default is 72
  and `py-comment-fill-column, default is 79

- boolean `py-tab-shifts-region-p'
  when `t', TAB will indent/cycle the region, not just the current line.

- boolean `py-tab-indents-region-p' 
  when `t', when first TAB doesn't shift, `indent-region' is called

- command from RET customizable via `py-return-key':